Change_LOG / History

VX.X

Impacts All
Add option to set the "wait_for" period. This is how long the script waits to see if the movie changes status in CouchPotato.

Impacts Torrents
Fixed Delete_Original option

V8.1 04/05/2013

Impacts All
Improved exception logging for error conditions

Impacts Torrents
Fixed an import error when extracting

Impacts NZBs
Fixed passthrough of nzbName from NZBGet to pass the .nzb extension (required for SickBeard's failed fork)


V8.0 28/04/2013

Impacts All
Added download_id pass through for CouchPotato release matching
Uses single directory scanning for CouchPotato renamer
Matches imdb_id, download_id, clientAgent with CPS database

Impacts NZB
Addeed direct configuration support via nzbget webUI (nzbget v11+)
All nzb scripts are now directly callabale in nzbget v11
Settings made in nzbget webUI will be applied to the auotPorcessMedia.cfg when the scripts are run from nzbget.
Fixed TLS support for NZBGet email notifications (for V10 support) 

V7.1 28/03/2013

Impacts Torrents
Added test for chp.exe. If not found, calls 7zip directly
Added test for multi-part archives. Will only extract part1

Impacts NZB
Fixed failed download handling from nzbget (won't delete or move root!!!)
Fixed sendEmail for nzbget to use html with <br> line breaks

V7.0 21/03/2013

Impacts Torrents
Added option to delete torrent and original files after processing (utorrent)

Impacts NZB 
Added nzbget windows script (to be compiled)
Changed nzbget folders to previous X.X, current-stable, testing X.X format
Fix nzbget change directory failure problem
Improved nzbget logging
Add logging to nzbget email notification
Synchronised v10 to latest nzbget testing scripts
Added failed download folder for failed downloads in nzbget
Added option to delete failed in nzbget
Created a single nzbToMedia.py script for all categories (will be the only nzb script compiled for windows)

Impacts All
Added rotating log file handler
Added ffmpeg transcoder