@@ -82,8 +82,6 @@ web_root =
 clientAgent = other
 ###### useLink - Set to hard for physical links, sym for symbolic links, and no to not use links
 useLink = hard
-###### minSampleSize - Minimum required size to consider a file not an sample file (in MB, eg 200mb)
-minSampleSize = 200
 ###### outputDirectory - Default output directory (categories will be appended as sub directory to outputDirectory)
 outputDirectory = /abs/path/to/complete/
 ###### Other categories/labels defined for your downloader. Does not include CouchPotato, SickBeard, HeadPhones, Mylar categories.
@@ -99,6 +97,8 @@ deleteOriginal = 0
 compressedExtensions = .zip,.rar,.7z,.gz,.bz,.tar,.arj,.1,.01,.001
 mediaExtensions = .mkv,.avi,.divx,.xvid,.mov,.wmv,.mp4,.mpg,.mpeg,.vob,.iso
 metaExtensions = .nfo,.sub,.srt,.jpg,.gif
+###### minSampleSize - Minimum required size to consider a media file not a sample file (in MB, eg 200mb)
+minSampleSize = 200
 
 [Transcoder]
 transcode = 0
